@@ -2290,3 +2290,12 @@ M       cg_vbm_write.m
     cg_vbm_write.m
 ------------------------------------------------------------------------
 r498 | gaser | 2013-09-20 09:40:55
+
+M       CHANGES.txt
+M       cg_vbm_run.m
+M       cg_vbm_write.m
+M       compile.m
+
+
+------------------------------------------------------------------------
+r499 | dahnke | 2013-09-20 13:01:01
